--- a/WebBasicsHTMLandCSS/Catalogue/index.html
+++ b/WebBasicsHTMLandCSS/Catalogue/index.html
@@ -411,7 +411,7 @@
         <div class="block">
             <h2>Learn SQL Database Programming.</h2>
             <p>
-                <img class="img-position" src="./img/learn-sql-quickly.jpg" alt="Learn SQL Quickly"
+                <img class="img-position" src="./img/learn-sql-programming.jpg" alt="Learn SQL Quickly"
                      align="left" vspace="10" hspace="30">
             <table class="book-type-table">
                 <tr>
